Set grid height to 100% again (bug on mobile)

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,7 @@ button.eraser:disabled {
 
 #grid {
   display: grid;
+  height: 100%;
   width: 100%;
   max-width: 500px;
   min-width: 500px;
